# save-belgium-from-telemarketing

./: .gitignore  20200228_v2.xlsx  LICENSE  README.md  app.py  config.py  core.py  main.py  pyproject.toml  serverless.yml  zappa_settings.json
tests/: conftest.py  test_core.py
tests/test_api/: test_api_post_number.py
