[tool.poetry]
name = "do-not-call"
version = "0.1.0"
description = ""
authors = ["Mathieu Dhondt <laundro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.25.1"
Faker = "^8.1.3"
arrow = "^1.1.0"
loguru = "^0.5.3"
zappa = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
